--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -10,3 +10,27 @@ body {
     color-scheme: dark;
   }
 }
+
+.gradient-blur {
+  position: sticky;
+  right: -1px;
+  flex-shrink: 0;
+  pointer-events: none;
+}
+
+.gradient-blur::before {
+  content: "";
+  display: block;
+  position: absolute;
+  inset: 0;
+  background: #ffffff;
+  mask-image: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0) 40%,
+    rgba(0, 0, 0, 0.5) 50%,
+    rgba(0, 0, 0, 0.8) 60%,
+    rgba(0, 0, 0, 0.95) 80%,
+    rgba(0, 0, 0, 0.98) 90%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
