--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -11,7 +11,7 @@ body {
   }
 }
 
-.personal-project-animation {
+.flip-in-hor-bottom {
   -webkit-animation: flip-in-hor-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: flip-in-hor-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
