disable dark mode

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -2,14 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+/* html,
 body {
   @apply bg-white dark:bg-gray-950;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
-}
+} */
 
 .flip-in-hor-bottom {
   -webkit-animation: flip-in-hor-bottom 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
