--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -52,3 +52,10 @@ body {
     opacity: 1;
   }
 }
+
+@font-face {
+  font-family: "Noto Sans JP";
+  src: url(/fonts/NotoSansJP-VariableFont_wght.ttf);
+  font-weight: 100 800;
+  font-display: swap;
+}
